force-app/main/default/objects/Cancel__c/Cancel__c.object-meta.xml
<CustomObject>
    <label>解約申入</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>解約申入No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>