force-app/main/default/objects/Cancel__c/fields/AcceptConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptConfirmationDate__c</fullName>
    <label>受理確認日</label>
    <type>Date</type>
</CustomField>