force-app/main/default/objects/Cancel__c/fields/AcceptDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptDate__c</fullName>
    <label>SPT受付日</label>
    <type>Date</type>
</CustomField>