force-app/main/default/objects/Cancel__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>IF(Account__r.RecordTypeId = &apos;012O0000000YiuJ&apos;, Account__r.AccountId__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業ID</label>
    <type>Text</type>
</CustomField>