force-app/main/default/objects/Cancel__c/fields/AgreementTermsCancelNotice__c.field-meta.xml
<CustomField>
    <fullName>AgreementTermsCancelNotice__c</fullName>
    <label>合意条件_解約予告</label>
    <length>255</length>
    <type>Text</type>
</CustomField>