force-app/main/default/objects/Cancel__c/fields/AgreementTermsCost__c.field-meta.xml
<CustomField>
    <fullName>AgreementTermsCost__c</fullName>
    <label>合意条件_費用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>