force-app/main/default/objects/Cancel__c/fields/AgreementTermsLeaveDueDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementTermsLeaveDueDate__c</fullName>
    <label>合意条件_退去期日</label>
    <type>Date</type>
</CustomField>