force-app/main/default/objects/Cancel__c/fields/AgreementTermsOther__c.field-meta.xml
<CustomField>
    <fullName>AgreementTermsOther__c</fullName>
    <label>合意条件_その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>