force-app/main/default/objects/Cancel__c/fields/ApplicantConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicantConfirmDate__c</fullName>
    <label>適用者確認日</label>
    <type>Date</type>
</CustomField>