force-app/main/default/objects/Cancel__c/fields/ApplicantConfirmDateTime__c.field-meta.xml
<CustomField>
    <fullName>ApplicantConfirmDateTime__c</fullName>
    <label>適用者確認日入力時刻</label>
    <type>DateTime</type>
</CustomField>