force-app/main/default/objects/Cancel__c/fields/ApplicationCounterChargeLinkNot__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCounterChargeLinkNot__c</fullName>
    <label>申入れ窓口担当(リンクなし）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>