force-app/main/default/objects/Cancel__c/fields/ApplicationDifferenceAlert__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDifferenceAlert__c</fullName>
    <label>申込差異アラート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>