force-app/main/default/objects/Cancel__c/fields/ApplicationFormArriver__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormArriver__c</fullName>
    <label>申請書確認日</label>
    <type>Date</type>
</CustomField>