force-app/main/default/objects/Cancel__c/fields/ApplicationFormSubmitRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormSubmitRequestDate__c</fullName>
    <label>申請書提出依頼日</label>
    <type>Date</type>
</CustomField>