force-app/main/default/objects/Cancel__c/fields/ApplicationGuidanceEmailRetireText__c.field-meta.xml
<CustomField>
    <fullName>ApplicationGuidanceEmailRetireText__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.ApplicationGuidanceEmailRetiredText__c</formula>
    <label>申請案内メール退職本文</label>
    <type>Text</type>
</CustomField>