force-app/main/default/objects/Cancel__c/fields/ApplicationReminderDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReminderDate__c</fullName>
    <label>申請書督促日</label>
    <type>Date</type>
</CustomField>