force-app/main/default/objects/Cancel__c/fields/BillingDateResult__c.field-meta.xml
<CustomField>
    <fullName>BillingDateResult__c</fullName>
    <formula>OR( YEAR(LastRentDefraymentDate__c)  &lt;&gt;  LastPaymentYear__c  , MONTH(LastRentDefraymentDate__c)   &lt;&gt;  LastPaymentMonth__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求月結果</label>
    <type>Checkbox</type>
</CustomField>