force-app/main/default/objects/Cancel__c/fields/CalculateSignature__c.field-meta.xml
<CustomField>
    <fullName>CalculateSignature__c</fullName>
    <formula>CancelCalculate__r.Signature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>署名（精算担当チーム）</label>
    <type>Text</type>
</CustomField>