force-app/main/default/objects/Cancel__c/fields/CancelAcceptDate__c.field-meta.xml
<CustomField>
    <fullName>CancelAcceptDate__c</fullName>
    <label>解約受付日</label>
    <type>Date</type>
</CustomField>