force-app/main/default/objects/Cancel__c/fields/CancelApplicationAcceptanceTime__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationAcceptanceTime__c</fullName>
    <label>解約申入受理入力時刻</label>
    <type>DateTime</type>
</CustomField>