force-app/main/default/objects/Cancel__c/fields/CancelApplicationNote2__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationNote2__c</fullName>
    <label>解約申込書備考２</label>
    <type>TextArea</type>
</CustomField>