force-app/main/default/objects/Cancel__c/fields/CancelApplicationNote__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationNote__c</fullName>
    <label>解約申入備考</label>
    <type>TextArea</type>
</CustomField>