force-app/main/default/objects/Cancel__c/fields/CancelCounter__c.field-meta.xml
<CustomField>
    <fullName>CancelCounter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>解約申入れ先</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>家主レコードが存在しないか、解約申入れ窓口となっている家主レコードではありません。正しい家主レコードを入力してください。</errorMessage>
        <filterItems>
            <field>$Source.RealEstate__c</field>
            <operation>equals</operation>
            <valueField>Landlord__c.RealEstate__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>解約申入 (申入れ窓口)</relationshipLabel>
    <relationshipName>CancelCounterLandlord</relationshipName>
    <type>Lookup</type>
</CustomField>