force-app/main/default/objects/Cancel__c/fields/CancelCounterStaff__c.field-meta.xml
<CustomField>
    <fullName>CancelCounterStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約申入れ先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>解約申入 (申入れ窓口担当者)</relationshipLabel>
    <relationshipName>mlbt</relationshipName>
    <type>Lookup</type>
</CustomField>