force-app/main/default/objects/Cancel__c/fields/CancelCounterStaffText__c.field-meta.xml
<CustomField>
    <fullName>CancelCounterStaffText__c</fullName>
    <formula>CancelCounterStaff__r.LastName + &quot; &quot; +  CancelCounterStaff__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>解約申入れ先担当（リンクなし）</label>
    <type>Text</type>
</CustomField>