force-app/main/default/objects/Cancel__c/fields/CancelDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDesiredDate__c</fullName>
    <label>解約希望日</label>
    <type>Date</type>
</CustomField>