force-app/main/default/objects/Cancel__c/fields/CancellationHoldNotificationFlag__c.field-meta.xml
<CustomField>
    <fullName>CancellationHoldNotificationFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約保留通知対象フラグ</label>
    <type>Checkbox</type>
</CustomField>