force-app/main/default/objects/Cancel__c/fields/CancellationPenaltyWithinPeriodCheck__c.field-meta.xml
<CustomField>
    <fullName>CancellationPenaltyWithinPeriodCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>期間内解約違約金</label>
    <type>Checkbox</type>
</CustomField>