force-app/main/default/objects/Cancel__c/fields/CancellationPenaltyWithinPeriodResult__c.field-meta.xml
<CustomField>
    <fullName>CancellationPenaltyWithinPeriodResult__c</fullName>
    <formula>AND(Rent__r.ContractEndDate__c  &gt;=  LastRentDefraymentDate__c ,   LastRentDefraymentDate__c  &gt;=  Rent__r.ContractEndDate__c + 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>期間内解約違約金結果</label>
    <type>Checkbox</type>
</CustomField>