force-app/main/default/objects/Cancel__c/fields/CancellationRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestDate__c</fullName>
    <label>キャンセル依頼日</label>
    <type>Date</type>
</CustomField>