force-app/main/default/objects/Cancel__c/fields/CancellationRequestDateCheck__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestDateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約申出日</label>
    <type>Checkbox</type>
</CustomField>