force-app/main/default/objects/Cancel__c/fields/CancellationRequestNote__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestNote__c</fullName>
    <label>キャンセル依頼備考</label>
    <type>TextArea</type>
</CustomField>