force-app/main/default/objects/Cancel__c/fields/CancelLenderAgreementCollectDate__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderAgreementCollectDate__c</fullName>
    <label>合意書回収日</label>
    <type>Date</type>
</CustomField>