force-app/main/default/objects/Cancel__c/fields/CancelLenderAgreementShipper__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderAgreementShipper__c</fullName>
    <label>合意書発送者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>