force-app/main/default/objects/Cancel__c/fields/CancelLenderCancelDateConfirmer__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderCancelDateConfirmer__c</fullName>
    <label>解約貸主解約日確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>