force-app/main/default/objects/Cancel__c/fields/CancelLenderCompanyApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderCompanyApprovalDate__c</fullName>
    <label>企業承認日</label>
    <type>Date</type>
</CustomField>