force-app/main/default/objects/Cancel__c/fields/CancelLenderCompanyApprover__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderCompanyApprover__c</fullName>
    <label>企業承認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>