force-app/main/default/objects/Cancel__c/fields/CancelLenderPercussionDate__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderPercussionDate__c</fullName>
    <label>貸主打診日</label>
    <type>Date</type>
</CustomField>