force-app/main/default/objects/Cancel__c/fields/CancelLenderPercussor__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderPercussor__c</fullName>
    <label>貸主打診者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>