force-app/main/default/objects/Cancel__c/fields/CancelLenderResidentContactDate__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderResidentContactDate__c</fullName>
    <label>入居者連絡日</label>
    <type>Date</type>
</CustomField>