force-app/main/default/objects/Cancel__c/fields/CancelLenderSideReplyDate__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderSideReplyDate__c</fullName>
    <label>貸主側回答日</label>
    <type>Date</type>
</CustomField>