force-app/main/default/objects/Cancel__c/fields/CancelLenderTermsNegotiationDate__c.field-meta.xml
<CustomField>
    <fullName>CancelLenderTermsNegotiationDate__c</fullName>
    <label>ご確認書督促日</label>
    <type>Date</type>
</CustomField>