force-app/main/default/objects/Cancel__c/fields/CancelMonthPayment__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthPayment__c</fullName>
    <label>解約月賃料計算</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>日割り</fullName>
            </value>
            <value>
                <fullName>半月割り</fullName>
            </value>
            <value>
                <fullName>月割り</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>