force-app/main/default/objects/Cancel__c/fields/CancelMonthPaymentCheckResult__c.field-meta.xml
<CustomField>
    <fullName>CancelMonthPaymentCheckResult__c</fullName>
    <label>解約月賃料計算自動チェック</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CheckResult</valueSetName>
    </valueSet>
</CustomField>