force-app/main/default/objects/Cancel__c/fields/CancelOnHold__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約保留フラグ</label>
    <type>Checkbox</type>
</CustomField>