force-app/main/default/objects/Cancel__c/fields/CancelOnHoldCategory__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHoldCategory__c</fullName>
    <label>解約保留区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>