force-app/main/default/objects/Cancel__c/fields/CancelOnHoldMemo__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHoldMemo__c</fullName>
    <label>保留メモ</label>
    <type>TextArea</type>
</CustomField>