force-app/main/default/objects/Cancel__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>解約理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>