force-app/main/default/objects/Cancel__c/fields/CancelReasonJoint__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonJoint__c</fullName>
    <label>解約理由_JOINT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01退職</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>