force-app/main/default/objects/Cancel__c/fields/CancelReceptionist__c.field-meta.xml
<CustomField>
    <fullName>CancelReceptionist__c</fullName>
    <label>解約受付者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>