force-app/main/default/objects/Cancel__c/fields/CancelSupportPostKeeper1__c.field-meta.xml
<CustomField>
    <fullName>CancelSupportPostKeeper1__c</fullName>
    <label>解約サポート_1回目ポスト保管者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>