force-app/main/default/objects/Cancel__c/fields/CancelSupportPostReceiptDate2__c.field-meta.xml
<CustomField>
    <fullName>CancelSupportPostReceiptDate2__c</fullName>
    <label>解約サポート_2回目ポスト受領日</label>
    <type>Date</type>
</CustomField>