force-app/main/default/objects/Cancel__c/fields/CancelSupportPostStorageDate1__c.field-meta.xml
<CustomField>
    <fullName>CancelSupportPostStorageDate1__c</fullName>
    <label>解約サポート_1回目ポスト保管日</label>
    <type>Date</type>
</CustomField>