force-app/main/default/objects/Cancel__c/fields/ChargesPayerCompanyDesired__c.field-meta.xml
<CustomField>
    <fullName>ChargesPayerCompanyDesired__c</fullName>
    <label>手数料負担者_企業希望</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>入居者</fullName>
            </value>
            <value>
                <fullName>企業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>