force-app/main/default/objects/Cancel__c/fields/ChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>CancelApplicationTeam</relationshipName>
    <type>Lookup</type>
</CustomField>