force-app/main/default/objects/Cancel__c/fields/CompanyAnswer__c.field-meta.xml
<CustomField>
    <fullName>CompanyAnswer__c</fullName>
    <label>企業回答（要約）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>