force-app/main/default/objects/Cancel__c/fields/CompanyReportLinker__c.field-meta.xml
<CustomField>
    <fullName>CompanyReportLinker__c</fullName>
    <label>企業報告連携者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>