force-app/main/default/objects/Cancel__c/fields/ConfirmationArriveDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationArriveDate__c</fullName>
    <label>ご確認書着日</label>
    <type>Date</type>
</CustomField>