force-app/main/default/objects/Cancel__c/fields/ConfirmationRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationRegistrationDate__c</fullName>
    <label>登録完了日</label>
    <type>Date</type>
</CustomField>