force-app/main/default/objects/Cancel__c/fields/ConfirmationRegistrationPerson__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationRegistrationPerson__c</fullName>
    <label>ご担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>