force-app/main/default/objects/Cancel__c/fields/ConfirmationReturnDeadline__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationReturnDeadline__c</fullName>
    <label>確認書返送期日</label>
    <type>Date</type>
</CustomField>