force-app/main/default/objects/Cancel__c/fields/ContractChangeArriveConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeArriveConfirmDate__c</fullName>
    <label>名変着確認日</label>
    <type>Date</type>
</CustomField>