force-app/main/default/objects/Cancel__c/fields/ContractChangeArriveDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeArriveDate__c</fullName>
    <label>名変申請書着日</label>
    <type>Date</type>
</CustomField>