force-app/main/default/objects/Cancel__c/fields/ContractChangeBankAccountGuide__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeBankAccountGuide__c</fullName>
    <label>名変口座案内者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>