force-app/main/default/objects/Cancel__c/fields/ContractChangeChargesPayment__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeChargesPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>名変手数料の支払</label>
    <type>Checkbox</type>
</CustomField>