force-app/main/default/objects/Cancel__c/fields/ContractChangeCompletionConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeCompletionConfirmDate__c</fullName>
    <label>名変完了確認日</label>
    <type>Date</type>
</CustomField>