force-app/main/default/objects/Cancel__c/fields/ContractChangeContractShipper__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeContractShipper__c</fullName>
    <label>名変契約書発送者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>