force-app/main/default/objects/Cancel__c/fields/ContractChangeExaminationConfirmer__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeExaminationConfirmer__c</fullName>
    <label>名変審査確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>