force-app/main/default/objects/Cancel__c/fields/ContractChangeExaminationScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeExaminationScheduledDate__c</fullName>
    <label>名変審査通過予定日</label>
    <type>Date</type>
</CustomField>