force-app/main/default/objects/Cancel__c/fields/ContractChangeIncomingConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeIncomingConfirmDate__c</fullName>
    <label>着信確認日</label>
    <type>Date</type>
</CustomField>