force-app/main/default/objects/Cancel__c/fields/ContractChangeIncomingConfirmer__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeIncomingConfirmer__c</fullName>
    <label>名変着信確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>