force-app/main/default/objects/Cancel__c/fields/ContractChangeJointGuarantor__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeJointGuarantor__c</fullName>
    <label>名変連帯保証人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>