force-app/main/default/objects/Cancel__c/fields/ContractChangeNewContractorName__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeNewContractorName__c</fullName>
    <label>名変新契約者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>