force-app/main/default/objects/Cancel__c/fields/ContractChangeOfferDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeOfferDate__c</fullName>
    <label>名変申出日</label>
    <type>Date</type>
</CustomField>