force-app/main/default/objects/Cancel__c/fields/ContractChangeOfferDateProgressDays__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeOfferDateProgressDays__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>名変申出日経過日数</label>
    <type>Text</type>
</CustomField>