force-app/main/default/objects/Cancel__c/fields/ContractChangeOriginalRecoveryCostDeal__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeOriginalRecoveryCostDeal__c</fullName>
    <label>名変原状回復費用取扱い</label>
    <length>255</length>
    <type>Text</type>
</CustomField>