force-app/main/default/objects/Cancel__c/fields/ContractChangeOriginalRecoveryObligation__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeOriginalRecoveryObligation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>名変原状回復義務</label>
    <type>Checkbox</type>
</CustomField>