force-app/main/default/objects/Cancel__c/fields/ContractChangeOtherRemittance__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeOtherRemittance__c</fullName>
    <label>名変その他送金</label>
    <length>255</length>
    <type>Text</type>
</CustomField>