force-app/main/default/objects/Cancel__c/fields/ContractChangeProgressConfirmer1__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeProgressConfirmer1__c</fullName>
    <label>名変進捗確認者1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>