force-app/main/default/objects/Cancel__c/fields/ContractChangeProposer__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeProposer__c</fullName>
    <label>名変申出者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>