force-app/main/default/objects/Cancel__c/fields/ContractChangeRentPayment__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeRentPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>名変_賃料支払</label>
    <type>Checkbox</type>
</CustomField>