force-app/main/default/objects/Cancel__c/fields/ContractChangeResidentContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeResidentContactDate__c</fullName>
    <label>名変入居者連絡日</label>
    <type>Date</type>
</CustomField>