force-app/main/default/objects/Cancel__c/fields/ContractChangeSecurityDepositCalculate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeSecurityDepositCalculate__c</fullName>
    <label>名変敷金精算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>