force-app/main/default/objects/Cancel__c/fields/ContractChangeTerms__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeTerms__c</fullName>
    <label>名変条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>