force-app/main/default/objects/Cancel__c/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <label>新規契約開始日</label>
    <type>Date</type>
</CustomField>