force-app/main/default/objects/Cancel__c/fields/ContractorChangeCounterCharge__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeCounterCharge__c</fullName>
    <label>（不要）名変窓口担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>