force-app/main/default/objects/Cancel__c/fields/ContractorChangeProgressConfirmFaxPages__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeProgressConfirmFaxPages__c</fullName>
    <label>名義変更進捗確認FAX頁数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>