force-app/main/default/objects/Cancel__c/fields/ContractorChangeReson__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeReson__c</fullName>
    <label>名義変更理由</label>
    <type>TextArea</type>
</CustomField>