force-app/main/default/objects/Cancel__c/fields/ContractorChangeTermsResearchResult__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeTermsResearchResult__c</fullName>
    <label>名義変更条件調査結果</label>
    <type>TextArea</type>
</CustomField>