force-app/main/default/objects/Cancel__c/fields/ContractorFormArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ContractorFormArrivalDate__c</fullName>
    <label>業者書式到着日</label>
    <type>Date</type>
</CustomField>