force-app/main/default/objects/Cancel__c/fields/ContractorSwitchingUntilDays__c.field-meta.xml
<CustomField>
    <fullName>ContractorSwitchingUntilDays__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>名義切替迄日数</label>
    <type>Text</type>
</CustomField>