force-app/main/default/objects/Cancel__c/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <label>契約期間</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>新たに設定</fullName>
            </value>
            <value>
                <fullName>現契約継承</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>