force-app/main/default/objects/Cancel__c/fields/CorporateHousingStaff__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>oPX9</relationshipName>
    <type>Lookup</type>
</CustomField>