force-app/main/default/objects/Cancel__c/fields/CorporateHousingStaffName__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingStaffName__c</fullName>
    <formula>CorporateHousingStaff__r.LastName + CorporateHousingStaff__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社宅担当者名</label>
    <type>Text</type>
</CustomField>