force-app/main/default/objects/Cancel__c/fields/DailyCalculationPattern__c.field-meta.xml
<CustomField>
    <fullName>DailyCalculationPattern__c</fullName>
    <label>自動日割計算パターン</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>日割</fullName>
            </value>
            <value>
                <fullName>半月割</fullName>
            </value>
            <value>
                <fullName>月割</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>