force-app/main/default/objects/Cancel__c/fields/del_ApplicationFormArriver__c.field-meta.xml
<CustomField>
    <fullName>del_ApplicationFormArriver__c</fullName>
    <label>削除_申請書着者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>