force-app/main/default/objects/Cancel__c/fields/DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmount__c</fullName>
    <label>敷金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>