force-app/main/default/objects/Cancel__c/fields/DepositTreatment__c.field-meta.xml
<CustomField>
    <fullName>DepositTreatment__c</fullName>
    <label>敷金扱い</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>預け替え</fullName>
            </value>
            <value>
                <fullName>スライド</fullName>
            </value>
            <value>
                <fullName>敷金無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>