force-app/main/default/objects/Cancel__c/fields/DifferenceMoveInOutDate__c.field-meta.xml
<CustomField>
    <fullName>DifferenceMoveInOutDate__c</fullName>
    <formula>MoveOutScheduledDate__c - NewMatter__r.MoveScheduledDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入退去日差分</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>