force-app/main/default/objects/Cancel__c/fields/DocumentDataCompanyStaff__c.field-meta.xml
<CustomField>
    <fullName>DocumentDataCompanyStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>資料_社員向け</label>
    <referenceTo>DocumentDataCompanyStaff__c</referenceTo>
    <relationshipLabel>解約申入</relationshipLabel>
    <relationshipName>CancelDocumentDataRelation</relationshipName>
    <type>Lookup</type>
</CustomField>