force-app/main/default/objects/Cancel__c/fields/DocumentOfExchange__c.field-meta.xml
<CustomField>
    <fullName>DocumentOfExchange__c</fullName>
    <label>書類の取り交わし</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>契約書再締結</fullName>
            </value>
            <value>
                <fullName>覚書(管理指定）</fullName>
            </value>
            <value>
                <fullName>覚書(SNT作成）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>