force-app/main/default/objects/Cancel__c/fields/DoubleCorporateHousing__c.field-meta.xml
<CustomField>
    <fullName>DoubleCorporateHousing__c</fullName>
    <label>二重社宅</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>あり（解約する）</fullName>
            </value>
            <value>
                <fullName>あり（解約しない）</fullName>
            </value>
            <value>
                <fullName>駐車場</fullName>
            </value>
            <value>
                <fullName>レンタルあり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>