force-app/main/default/objects/Cancel__c/fields/DoubleCorporateHousingConfirmer__c.field-meta.xml
<CustomField>
    <fullName>DoubleCorporateHousingConfirmer__c</fullName>
    <label>二重社宅確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>