force-app/main/default/objects/Cancel__c/fields/ExaminationResultDetails__c.field-meta.xml
<CustomField>
    <fullName>ExaminationResultDetails__c</fullName>
    <label>審査結果詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>