force-app/main/default/objects/Cancel__c/fields/ExpectedOrderDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOrderDate__c</fullName>
    <label>発注予定日</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>テスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>