force-app/main/default/objects/Cancel__c/fields/ExtensionFeasibilityReson__c.field-meta.xml
<CustomField>
    <fullName>ExtensionFeasibilityReson__c</fullName>
    <label>延長可否理由</label>
    <type>TextArea</type>
</CustomField>