force-app/main/default/objects/Cancel__c/fields/ForTraderShipper__c.field-meta.xml
<CustomField>
    <fullName>ForTraderShipper__c</fullName>
    <label>業者用発送者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>