force-app/main/default/objects/Cancel__c/fields/GarageConfirmer__c.field-meta.xml
<CustomField>
    <fullName>GarageConfirmer__c</fullName>
    <label>駐車場確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>