force-app/main/default/objects/Cancel__c/fields/GarageConfirmResult__c.field-meta.xml
<CustomField>
    <fullName>GarageConfirmResult__c</fullName>
    <label>駐車場確認結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pなし</fullName>
            </value>
            <value>
                <fullName>Pあり（解約する）</fullName>
            </value>
            <value>
                <fullName>Pあり（解約しない）</fullName>
            </value>
            <value>
                <fullName>賃料込み</fullName>
            </value>
            <value>
                <fullName>駐車場</fullName>
            </value>
            <value>
                <fullName>駐車場のみ</fullName>
            </value>
            <value>
                <fullName>解約済み</fullName>
            </value>
            <value>
                <fullName>レンタル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>