force-app/main/default/objects/Cancel__c/fields/GuidanceFollower__c.field-meta.xml
<CustomField>
    <fullName>GuidanceFollower__c</fullName>
    <label>案内フォロー者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>