force-app/main/default/objects/Cancel__c/fields/GuidancePreparationCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>GuidancePreparationCompletedBy__c</fullName>
    <label>退去案内準備者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>